commiting on 28 feb 23

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="display-container">
             <input readonly placeholder="Password" class="display" data-password-display> 
             <button class="" data-copy>     <!--btn to copy pass--> 
-                 <span data-copyMsg></span> <!--copied message when click on button -->
+                 <span class="copiedMsg" data-copyMsg></span> <!--copied message when click on button -->
                 <img src="/pics/copy.svg" alt="" width="23" height="23">
             </button>   
         </div>
